Paul's branch, fixing spacing left to right

--- a/css/pairdesign-project.css
+++ b/css/pairdesign-project.css
@@ -7,6 +7,10 @@
 body {
     background-color: #F0F0F0;
 }
+#main{
+    /*display: flex;*/
+    /*justify-content: space-between;*/
+}
 #website-fonts {
     font-family: 'Abel', sans-serif;
 }
@@ -83,6 +87,13 @@ body {
     color: #FFFFFF;
     font-family: "Anton", sans-serif;
 }
+#left-images{
+    width: 95%;
+    height: auto;
+}
+#left-side {
+    border: solid 1px red;
+}
 #img-icons {
     display: flex;
     justify-content: end;
@@ -152,7 +163,67 @@ p {
     display: flex;
     justify-content: center;
 }
-#imgs:hover {
-    /*border: solid #E6E6E6 188px;*/
-    background-color: yellow;
+#rgt-images {
+    border: green solid 1px;
+    display: flex;
+    width: 5%;
+    height: auto;
+
+    margin: 1em;
+}
+#rgt-sd {
+    width: 65%;
+    /*border: solid red 2px;*/
+    display: flex;
+    /*flex-direction: column;*/
+    font-family: "Anton", sans-serif;
+}
+#right-text{
+    border: solid blue 1px;
+
+    display: flex;
+    word-wrap: break-word;
+    justify-content: center;
+    align-items: center;
+    width: 15%;
+    margin: 1em;
+    font-size: x-large;
+
+
+
+}
+#thumbnails {
+    /*border: solid yellow 3px;*/
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+
+}
+#last-tweet {
+    position: relative;
+    display: flex;
+    align-content: flex-start;
+    justify-content: flex-start;
+
+    /*border: orange solid 1px;*/
+    font-family: "Abel", sans-serif;
+}
+#tweet {
+    /*position: absolute;*/
+    /*!*top: 0;*!*/
+    /*!*left: 0;*!*/
+
+    /*border: solid blue 2px;*/
+    display: flex;
+    height: 15%;
+    width: 15%;
+}
+#content {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    display: flex;
+    /*flex-direction: row;*/
+    /*border: solid green 3px;*/
+
 }
